syntax = "proto3";

option csharp_namespace = "ImpactCalculator.Web";

package calc;

// The greeting service definition.
service Calculator {
  // Sends a greeting
  rpc GetScore (Vectors) returns (CvssScore);
}

enum AttackVector {
	PHYSICAL = 0;
	LOCAL = 1;
	ADJACENT_NETWORK = 2;
	NETWORK = 3;
}

enum AttackComplexity {
	LOW_COMPLEXITY = 0;
	HIGH_COMPLEXITY = 1;
}

enum PrivilegesRequired {
	NONE = 0;
	LOW = 1;
	HIGH = 2;
}

enum UserInteraction {
	USER_INTERACTION_NONE = 0;
	USER_INTERACTION_REQUIRED = 1;
}

enum Scope {
	UNCHANGED = 0;
	CHANGED = 1;
}

enum Impact {
	NO_IMPACT = 0;
	LOW_IMPACT = 1;
	HIGH_IMPACT = 2;
}

message Vectors {
	AttackVector attackVector = 1;
	AttackComplexity AttackComplexity = 2;
	PrivilegesRequired privilegesRequired = 3;
	UserInteraction userInteraction = 4;
	Scope scope = 5;
	Impact confidentialityImpact = 6;
	Impact integrityImpact = 7;
	Impact availabilityImpact = 8;
}

message CvssScore {
  double score = 1;
}